# aad-b2c-device-code-flow

./: .gitignore  Cargo.toml  LICENSE  README.md
docker/: Dockerfile  build-image.sh  docker-compose.yml
src/: azuread.rs  error.rs  main.rs  utils.rs
www/: complete.html  device.html
