[package]
name = "aad-b2c-device-code-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5.6", features = ["json"] }
chrono = "0.4.19"
envy = "0.4.2"
futures-util = "0.3.21"
oauth2 = "4.2.0"
rand = "0.8.5"
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "time"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
